# ActivitiesViewer

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  Dockerfile  PHASE6_COMPLETION.md  README.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  uv.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: commitlint.yml  create-release.yml  docker-publish.yml  publish.yml  release.yml  tests.yml
.streamlit/: config.toml
docs/: CLI_CONFIGURATION.md  CONFIGURATION_UPGRADE.md  DATA_STRUCTURE.md  DEVELOPMENT.md  PUBLISHING.md  QUICK_START.md  SETUP.md  SHARING.md
examples/: config.yaml  unified_config.yaml
src/activities_viewer/: __init__.py  app.py  cache.py  cli.py  config.py  pipeline.py
src/activities_viewer/ai/: __init__.py  client.py  context.py
src/activities_viewer/analytics/: __init__.py  insights.py
src/activities_viewer/components/: dashboard_components.py  goal_tracker.py
src/activities_viewer/data/: __init__.py  help_texts.py  metric_descriptions.py
src/activities_viewer/domain/: __init__.py  metrics.py  models.py
src/activities_viewer/pages/: 1_analysis.py  1_year_overview.py  2_monthly_analysis.py  2_weekly_analysis.py  3_activity_detail.py  3_detail.py  3_weekly_analysis.py  4_activity_detail.py  4_ai_coach.py  5_ai_coach.py  6_training_plan.py  7_fitness_estimation.py  8_strava_connect.py  9_settings.py
src/activities_viewer/pages/components/: __init__.py  activity_detail_components.py  dashboard_components.py  monthly_analysis_components.py  sync_button.py  weekly_analysis_components.py  year_overview_components.py
src/activities_viewer/pages/components/detail_tabs/: fatigue.py  overview.py  power.py
src/activities_viewer/repository/: base.py  csv_repo.py
src/activities_viewer/services/: __init__.py  activity_service.py  analysis_service.py  fitness_estimation.py  goal_service.py  strava_oauth.py  training_plan_service.py
src/activities_viewer/utils/: __init__.py  device_utils.py  formatting.py  metrics.py
tests/: __init__.py  conftest.py  test_config.py  test_csv_repo.py  test_data_contract.py  test_fitness_estimation.py  test_pipeline.py  test_strava_connect.py  test_sync_button.py
