[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "activities-viewer"
dynamic = ["version"]
description = "A Streamlit dashboard for visualizing and analyzing cycling activities data from Strava."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["strava", "cycling", "dashboard", "streamlit", "analytics", "visualization"]
authors = [
    { name = "Israel Barragan", email = "abraham0vidal@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "plotly>=5.17.0",
    "altair>=5.1.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
    "geopy>=2.4.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "scipy>=1.11.0",
    # Upstream Strava libraries (from private devpi index)
    "strava-fetcher>=1.7.0",
    "strava-analyzer>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/hope0hermes/ActivitiesViewer"
Issues = "https://github.com/hope0hermes/ActivitiesViewer/issues"
Source = "https://github.com/hope0hermes/ActivitiesViewer"
Documentation = "https://github.com/hope0hermes/ActivitiesViewer/blob/main/README.md"

[project.scripts]
activities-viewer = "activities_viewer.cli:main"

[project.optional-dependencies]
# AI features (Gemini integration, AI coaching)
ai = [
    "google-generativeai>=0.8.5",
    "langchain>=0.1.0",
    "langchain-google-genai>=2.0.10",
]

# NOTE: Future Phase 2 will add ai-full extra with:
#   qdrant-client>=1.7.0, sentence-transformers>=2.2.0, gradio>=3.50.0
# These pull PyTorch+CUDA (~6GB) so are excluded from lock resolution for now.

# Segment analysis and advanced features
segments = [
    "shapely>=2.0.0",
    "scikit-learn>=1.3.0",
]

# Performance optimization
performance = [
    "polars>=0.19.0",
    "pyarrow>=13.0.0",
]

# Development dependencies
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.1",
    "ruff>=0.9.1",
]

# Deployment dependencies
deployment = [
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
]

[tool.hatch.metadata]

[tool.hatch.version]
path = "src/activities_viewer/__init__.py"

[tool.hatch.build]
packages = ["src/activities_viewer"]

# Note: With UV as the default package manager, Hatch environments are optional
# UV handles virtual environments and dependency management directly
# These Hatch env configs are kept for compatibility with Hatch users

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | \.uv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = false
exclude = ['\.venv', '\.uv', 'build', 'dist', '.*\.ipynb$']
disable_error_code = ["call-overload", "annotation-unchecked", "arg-type", "var-annotated", "import-untyped"]

[[tool.mypy.overrides]]
module = ["pandas.*", "streamlit.*", "plotly.*", "folium.*", "altair.*", "streamlit_folium.*", "dateutil.*", "geopy.*", "yaml.*", "scipy.*", "langchain_google_genai.*", "google.generativeai.*", "google.*", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["strava_fetcher.*", "strava_analyzer.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src/activities_viewer",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (medium speed, filesystem)",
    "e2e: End-to-end tests (slow, full system)",
    "slow: Tests that take a long time to run",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/activities_viewer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
